# kotlin-java-mcp

./: CHANGELOG.md  Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: check-email.yml  release.yml
docs/: type-inference.md
scripts/: release.sh
src/: error.rs  lib.rs  main.rs  server.rs
src/gradle/: mod.rs  parser.rs
src/indexer/: java_parser.rs  mod.rs  parser.rs  scope.rs  symbols.rs
src/tools/: dependency_tree.rs  find_definition.rs  find_usages.rs  mod.rs
tests/: integration.rs
tests/fixtures/gradle/: dependencies_output.txt  projects_output.txt
tests/fixtures/sample-project/: settings.gradle.kts
tests/fixtures/sample-project/app/src/main/java/com/example/app/: LombokConsumer.java
tests/fixtures/sample-project/app/src/main/kotlin/com/example/app/: Application.kt  Config.kt  InMemoryUserRepository.kt  JavaUsage.kt  LombokUsage.kt  ReferencePatterns.kt  WorkflowUsage.kt
tests/fixtures/sample-project/core/src/main/java/com/example/core/: JavaHelper.java  LombokUser.java
tests/fixtures/sample-project/core/src/main/kotlin/com/example/core/: Config.kt  Extensions.kt  ReportServiceImpl.kt  Reporting.kt  Repository.kt  User.kt  UserService.kt  WorkflowConfig.kt
tests/fixtures/sample-project/feature/src/main/kotlin/com/example/feature/: UserProfile.kt
tests/integration/: cli_test.rs  cross_language_test.rs  find_definition_test.rs  find_usages_test.rs  gradle_test.rs  java_parser_test.rs  lombok_test.rs
