[package]
name = "kotlin-java-mcp"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "kotlin-java-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.15", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.24"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-java = "0.23"
serde = { version = "1", features = ["derive"] }
schemars = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"
parking_lot = "0.12"
walkdir = "2"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
